deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-bause-dev
spec:
  type: ClusterIP
  selector:
    app: cv
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
