deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: cv.bause.dev
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-bause-dev
                port:
                  name: http
      host: "cv.bause.dev"
  tls:
    - hosts:
        - cv.bause.dev
      secretName: cv-bause-dev-cert
